# docs/swagger.json
@@ -1067,6 +1067,121 @@
                 }
             }
         },
+        "/documents": {
+            "post": {
+                "description": "create new document",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Document"
+                ],
+                "summary": "Create new document",
+                "parameters": [
+                    {
+                        "description": "Document infos",
+                        "name": "document",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_esgi-challenge_backend_internal_models.DocumentCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_esgi-challenge_backend_internal_models.Document"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/documents/{id}": {
+            "get": {
+                "description": "Get document by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Document"
+                ],
+                "summary": "Get document by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_esgi-challenge_backend_internal_models.Document"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete document by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Document"
+                ],
+                "summary": "Delete document by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/examples": {
             "get": {
                 "description": "Get all example",
@@ -1274,7 +1389,7 @@
                 }
             }
         },
-        "/informationss": {
+        "/informations": {
             "get": {
                 "description": "Get all informations",
                 "produces": [
@@ -1299,7 +1414,9 @@
                         "schema": {}
                     }
                 }
-            },
+            }
+        },
+        "/informationss": {
             "post": {
                 "description": "create new informations",
                 "consumes": [
@@ -2089,6 +2206,89 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/schedules/{id}/code": {
+            "get": {
+                "description": "Get schedule by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Schedule"
+                ],
+                "summary": "Get schedule by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_esgi-challenge_backend_internal_models.Schedule"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/schedules/{id}/sign": {
+            "post": {
+                "description": "Check Sign for schedule",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Schedule"
+                ],
+                "summary": "Check Sign for schedule",
+                "parameters": [
+                    {
+                        "description": "Schedule infos",
+                        "name": "schedule",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_esgi-challenge_backend_internal_models.ScheduleCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_esgi-challenge_backend_internal_models.Schedule"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {}
                     }
                 }
@@ -2977,6 +3177,40 @@
                 }
             }
         },
+        "github_com_esgi-challenge_backend_internal_models.Document": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "description": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_esgi-challenge_backend_internal_models.DocumentCreate": {
+            "type": "object",
+            "properties": {
+                "byte": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "github_com_esgi-challenge_backend_internal_models.Example": {
             "type": "object",
             "properties": {
@@ -3306,11 +3540,14 @@
                 "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
+                "duration": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "time": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "updatedAt": {
                     "type": "string"
@@ -3323,6 +3560,7 @@
                 "campusId",
                 "classId",
                 "courseId",
+                "duration",
                 "time"
             ],
             "properties": {
@@ -3335,8 +3573,11 @@
                 "courseId": {
                     "type": "integer"
                 },
+                "duration": {
+                    "type": "integer"
+                },
                 "time": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -3346,6 +3587,7 @@
                 "campusId",
                 "classId",
                 "courseId",
+                "duration",
                 "time"
             ],
             "properties": {
@@ -3358,8 +3600,11 @@
                 "courseId": {
                     "type": "integer"
                 },
+                "duration": {
+                    "type": "integer"
+                },
                 "time": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -3508,13 +3753,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "invitationCode": {
-                    "type": "string"
-                },
                 "lastname": {
-                    "type": "string"
-                },
-                "passwordResetCode": {
                     "type": "string"
                 },
                 "schoolId": {
